--- a/src/components/signup/signup.scss
+++ b/src/components/signup/signup.scss
@@ -27,6 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 20px;
 
   @container signupContainer (min-width: 600px) {
@@ -55,6 +56,7 @@
   .field__input {
     form {
       display: flex;
+      flex-wrap: wrap;
       margin-bottom: 10px;
       gap: 5px;
 
@@ -108,6 +110,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 20px;
 
   @container signupContainer (min-width: 600px) {
@@ -120,6 +123,7 @@
 
   .link__text {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     gap: 10px;
 
