--- a/src/styles/_objects.scss
+++ b/src/styles/_objects.scss
@@ -12,6 +12,8 @@
     flex: 1;
     display: flex;
     flex-flow: column nowrap;
+    max-width: 100vw;
+    width: 100%;
   }
 }
 
